--- a/QwikNews/Base.lproj/LaunchScreen.storyboard
+++ b/QwikNews/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,26 +15,28 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lettern.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ity-jS-J8n">
-                                <rect key="frame" x="157" y="300" width="60" height="66"/>
+                                <rect key="frame" x="130" y="204" width="60" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="Nbv-oW-R9O"/>
+                                    <constraint firstAttribute="width" constant="60" id="Sd3-cn-c4F"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.19115509089999999" green="0.63786703349999996" blue="0.26147949700000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ity-jS-J8n" secondAttribute="bottom" constant="301" id="5IV-mB-mDI"/>
-                            <constraint firstItem="Ity-jS-J8n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="157" id="Nxe-Rl-DQT"/>
-                            <constraint firstItem="Ity-jS-J8n" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="280" id="YHd-0V-oYc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ity-jS-J8n" secondAttribute="trailing" constant="158" id="YST-I8-EIx"/>
+                            <constraint firstItem="Ity-jS-J8n" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="qZn-Bl-Enr"/>
+                            <constraint firstItem="Ity-jS-J8n" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xqj-Jf-fY0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="50.625" y="373.75"/>
         </scene>
     </scenes>
     <resources>
